# dgut-jwx

./: .gitignore  README.md  cookie.jsonc  pyproject.toml
docs/developer/network/: API分析报告.md  deep_analysis.json  har_analysis.json  技术实现文档.md  选课机制完整分析.md
script/network/: analyze_har.py  deep_analyze_har.py
src/jwx/: __init__.py  cli.py  client.py  config.py  jsonc.py  scheduler.py  selected_courses.py
userscript/: README.md
